--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,50 @@
-/* Created by: Mr. Coxall
-* Created on: Sep 2020
+/* Created by: hames al sharoa
+* Created on: june 2024
 * This file contains the CSS for index.html
 */
+
+.mdl-layout__header-row {
+  align-items: center;
+  justify-content: center;
+}
+
+.mdl-layout__content {
+  padding-left: 15pt;
+  padding-right: 15pt;
+  padding-top: 15pt;
+}
+
+/* Due to error in MDL : https://github.com/google/material-design-lite/issues/5281
+*/
+.mdl-ripple {
+  background: #000;
+  opacity: 0.001;
+}
+
+body {
+  background-color: rgb(255 229 229);
+}
+
+p {
+  color: black;
+  font-family: Helvetica, Arial, sans-serif;
+  font-weight: bold;
+  font-size: 1.5rem;
+  padding-top: 15pt;
+}
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 15px;
+}
+
+#joke {
+  font-size: 150%;
+  text-align: center;
+}
+
+h1 {
+  text-align: center;
+}
